We now generate a small "percentage complete of each language" file, so that getting that information doesn't take an entire second on Android (that's a lot at startup!) - down to a couple of ms!

--- a/android/assets/jsons/translationsByLanguage/Czech.properties
+++ b/android/assets/jsons/translationsByLanguage/Czech.properties
@@ -1,33 +1,20 @@
 
 # Tutorial tasks
 
- # Requires translation!
 Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup = Pohni jednotkou!\nKlikni na jednotku > Klikni na destinaci > Klikni na vyskočivší šipku
- # Requires translation!
 Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = Založ město!\nVyber osadníka (označ jednotku) > Klikni na 'Založ město' (levý spodní roh)
- # Requires translation!
 Enter the city screen!\nClick the city button twice = Zobraz město!\nKlikni dvakrát na tlačítko města
- # Requires translation!
 Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Zkoumej technologii!\nKlikni na tlačítko výzkumu (zelené v levém horním rohu) > \n vyber technologii > klikni na 'Zkoumej' (vpravo dole)
- # Requires translation!
 Pick a construction!\nEnter city screen > Click on a unit or building (left side) = Vyber stavbu!\nZobraz město > Klikni na jednotku nebo stavbu (levá strana)
- # Requires translation!
 Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Další tah!\nPřepínej mezi jednotkami pomocí 'Další jednotka' > Klikni na 'Další tah' 
- # Requires translation!
 Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Přerozděl pracovní plochu!\nZobraz město > přiřazení plochy zrušíš kliknutím na již přiřazenou plochu (zelená) > \n kliknutím na nepřiřazenou plochu jí přidáš populaci
- # Requires translation!
 Meet another civilization!\nExplore the map until you encounter another civilization! = Potkej jinou civilizaci!\nProzkoumávej mapu dokud nenarazíš na jinou civilizaci!
- # Requires translation!
 Open the options table!\nClick the menu button (top left) > click 'Options' = Otevři nastavení!\nKlikni na tlačítko menu (vlevo nahoře) > klikni na 'Nastavení'
  # Requires translation!
-Construct an improvement!\nConstruct a unit > Move to a Plains or Grassland tile > \n Choose 'Create improvement' > Choose the farm > \n Leave the worker there until it's finished = Postav vylepšení!\nPostav dělníka > Jdi s ním na Pláň nebo Louku > \n Vyber 'Postav vylepšení' > Vyber farmu > \n Nech dělníka pracovat dokud neskončí
- # Requires translation!
+Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Choose 'Create improvement' > Choose the farm > \n Leave the worker there until it's finished = 
 Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = Vytvoř obchodní cestu!\nPostav cestu mezi tvým hlavním městem a některým dalším\nNebo zapni automatizaci dělníka a počkej až ji vytvoří sám
- # Requires translation!
 Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit = Dobij město!\nDostaň zdraví město na nízkou úroveň > \nVstup do města s jednotkou pro boj nablízko
- # Requires translation!
 Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = Přesuň vzdušnou jednotkou!\nVyber vzdušnou jednotku > vyber jiné měso v dosahu > \nPřesuň jednotku do onoho města
- # Requires translation!
 See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = Zobraz statistiku!\nVstup do Přehledové obrazovky (pravý horní roh) >\nKlikni na 'Statistika'
 
 # Buildings
@@ -268,9 +255,7 @@ Pentagon = Pentagon
 'In preparing for battle I have always found that plans are useless, but planning is indispensable.'  - Dwight D. Eisenhower = 'Při přípravě bitvy jsem vždy zjistil, že plány jsou k ničemu ale plánování je nezbytné.' - Dwight D. Eisenhower
 Gold cost of upgrading military units reduced by 33% = Cena Zlata za vylepšení vojenských jednotek bude snížena o 33%
 
- # Requires translation!
 Manhattan Project = Projekt Manhattan
- # Requires translation!
 Enables nuclear weapon = Povolí atomovou zbraň
 
 Apollo Program = Program Apollo
@@ -340,7 +325,6 @@ Ally = Aliance
 You declared war on us! = Vyhlásili jste nám válku!
 Your warmongering ways are unacceptable to us. = Vaše chování je pro nás nepřijatelné.
 You have captured our cities! = Obsadili jste naše města!
- # Requires translation!
 We applaud your liberation of our conquered cities! = Oslavujeme osvobození našich měst!
 Years of peace have strengthened our relations. = Roky míru posílily naše vzájemné vztahy.
 Our mutual military struggle brings us closer together. = Naše společné vélečné tažení nás sblížíli
@@ -356,7 +340,6 @@ You betrayed your promise to not settle cities near us = Porušili jste svůj sl
 You fulfilled your promise to stop settling cities near us! = Dodrželi jste svůj slib nezakládat města poblíž našich hranic.
 You refused to stop settling cities near us = Odmítli jste žádost o nezakládání měst poblíž našich hranic
 Your arrogant demands are in bad taste = Vaše arogantní požadavky jsou dalším důkazem vaší zkaženosti
- # Requires translation!
 Your use of nuclear weapons is disgusting! = Použití vašich atomových zbraní je nechutné!
 
 Demands = Požadavky:
@@ -495,7 +478,6 @@ Ramkhamhaeng = Ram Khamhaeng
 Food and Culture from Friendly City-States are increased by 50% = Jídlo a Kulturní body z spřátelených Městských států se zvednou o 50%.
 
 Songhai = Songhajská říše
- # Requires translation!
 Askia = Askijská říše
 Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = Získává trojnásobek zlata z Barbarských táborů a drancování měst. Jednotky při naloďování se můžou bránit.
 
@@ -507,16 +489,11 @@ Barbarians = Barbaři
 Load copied data = Načíst zkopírované data
 Could not load game from clipboard! = Nepodařilo se nahrát hru ze schránky!
 Start game! = Začít hru!
- # Requires translation!
 Map options = Nastavení mapy
- # Requires translation!
 Game options = Nastavení hry
 Map type = Typ mapy
- # Requires translation!
 Generated = Generováno
- # Requires translation!
 Existing = Existující
- # Requires translation!
 Map generation type = Typ generované mapy
 Number of city-states = Počet městských států
 One City Challenge = Výzva - Jen jedno město
@@ -606,9 +583,7 @@ Map uploaded successfully! = Mapa úspěšně nahrána!
 
 Options = Možnosti
 Display options = Zobrazit možnosti
- # Requires translation!
 Gameplay options = Nastavení hratelnosti
- # Requires translation!
 Other options = Ostatní nastavení
 Turns between autosaves = Počet kol mezi automatickým uložením hry
 Sound effects volume = Hlasitost zvuků
@@ -628,7 +603,6 @@ Auto-build roads = Automatická vystavba cest
 Show minimap = Zobrazit minimapu
 Show pixel units = Zobrazit jednotky jako pixely
 Show pixel improvements = Zobrazit vylepšení jako pixely
- # Requires translation!
 Enable nuclear weapons = Povolit atomové zbraně
 Fontset = Typ písma
 
@@ -648,7 +622,6 @@ Cannot provide unit upkeep for [unitName] - unit has been disbanded! = Žold pro
 Work has started on [construction] = Začali jsme stavět - [construction]
 [cityName] cannot continue work on [construction] = Město [cityName] nemůže pokračovat ve stavbě budovy [construction]
 [cityname] has expanded its borders! = Město [cityname] rozšířilo své hranice!
- # Requires translation!
 Your Golden Age has ended. = Náš zlatý věk skončil.
 [cityName] has been razed to the ground! = Město [cityName] bylo srovnáno se zemí!
 We have conquered the city of [cityname]! = Dobyli jsme město [cityname]!
@@ -825,7 +798,6 @@ City health = Zdraví města
 Occupied! = Obsazené!
 Attack = Útok
 Bombard = Bombardovat
- # Requires translation!
 NUKE = ATOMOVKA
 Captured! = Zajat(a/o)!
 defence vs ranged = obrana v boji na dálku
@@ -837,10 +809,8 @@ vs [unitType] = proti [unitType]
 Terrain = Terén
 
 
- # Requires translation!
 Hurry Research = Urychlit výzkum
 Conduct Trade Mission = Započít obchodní misi
- # Requires translation!
 Your trade mission to [civName] has earned you [goldAmount] gold and [influenceAmount] influence! = Naše obchodní mise do [civName] nám přinesla [goldAmount] zlata a [influenceAmount] vlivu!
 Hurry Wonder = Uspíšit stavbu Divu
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = Naši občané jsou spokojeni s vaší vládou po dlouhou dobu díky čemuž říše vstoupila do Zlatého věku!
@@ -1033,7 +1003,6 @@ Cost of purchasing culture buildings reduced by 50% = Cena za nákup kulturních
 Protectionism = Protekcionismus
 +1 happiness from each luxury resource = +1 spokojenost za každý luxusní zdroj
 Commerce Complete = Kompletní Kupectví
- # Requires translation!
 +1 gold from every trading post, double gold from Great Merchant trade missions = +1 zlata z každého obchodního místa, dvojnásob zlata z obchodních míst Velkých Obchodníků
 
 Rationalism = Racionalismus
@@ -1267,7 +1236,6 @@ Mountain = Hory
 Forest = Les
 Jungle = Džungle
 Marsh = Bažina
- # Requires translation!
 Fallout = Atomový spad
 Oasis = Oáza
 Snow = Sníh
@@ -1278,25 +1246,18 @@ Impassible = Nepřístupné
 
 # Natural Wonders
 
- # Requires translation!
 Barringer Crater = Barringerův kráter
- # Requires translation!
 Grand Mesa = Velká náhorní plošina
- # Requires translation!
 Great Barrier Reef = Velký bariérový útes
- # Requires translation!
 Krakatoa = Krakatoa
- # Requires translation!
 Mount Fuji = Hora Fuji
  # Requires translation!
 Old Faithful = 
- # Requires translation!
 Rock of Gibraltar = Gibraltarské skály
  # Requires translation!
 Cerro de Potosi = 
  # Requires translation!
 El Dorado = 
- # Requires translation!
 Fountain of Youth = Fontána mládí
 
 # Resources
@@ -1351,7 +1312,6 @@ Remove Railroad = Odstranit železnici
 Remove Forest = Vykácet les
 Remove Jungle = Vykácet džungli
 Remove Marsh = Odstranit bažinu
- # Requires translation!
 Remove Fallout = Odstranit radioaktivní spad
 Ancient ruins = Starobylé ruiny
 City ruins = Zřiceniny města
@@ -1476,7 +1436,6 @@ Can only attack water = Může útočit pouze ve vodě
 Carrier = Letadlová loď
 Triplane = Trojplošník
 [percent]% chance to intercept air attacks = [percent]% šance zabránit leteckým útokům
- # Requires translation!
 Requires Manhattan Project = Vyžaduje Projekt Manhattan
 6 tiles in every direction always visible = 6 políček ve všech směrech je vždy viditelných
 Great War Bomber = Velký válečný bombardér
@@ -1501,11 +1460,9 @@ Unbuildable = Nelze vybudovat
 Can start an 8-turn golden age = Může odstartovat Zlatý věk na 8 tahů
 Can build improvement: Landmark = Může vybudovat: Dominanta
 Great Scientist = Velký Vědec
- # Requires translation!
 Can hurry technology research = Může uspíšich výzkum technologie
 Can build improvement: Academy = Může vybudovat vylepšení: Akademie
 Great Merchant = Velký Obchodník
- # Requires translation!
 Can undertake a trade mission with City-State, giving a large sum of gold and [influenceAmount] Influence = Může podniknout obchodní misi s městským státem, dávajíc tak velké množství zlata a [influenceAmount] vlivu
 Can build improvement: Customs house = Může vybudovat vylepšení: Celnice
 Great Engineer = Velký Inženýr
@@ -1603,5 +1560,4 @@ Ambush I = Přepadení I
 Ambush II = Přepadení II
 Haka War Dance = Haka - valečný tanec
 -10% combat strength for adjacent enemy units = -10% bojové síly pro nepřátelské jednotky na sousedních políčkách
- # Requires translation!
 Rejuvenation = Omlazení
