--- a/android/assets/jsons/translationsByLanguage/Spanish.properties
+++ b/android/assets/jsons/translationsByLanguage/Spanish.properties
@@ -595,7 +595,7 @@ Sound effects volume = Volumen de efectos
 Music volume = Volumen de música
 Download music = Descargar música
 Downloading... = Descargando...
-Could not download music! = ¡No se  pudo descargar la música!
+Could not download music! = ¡No se pudo descargar la música!
 Show = Mostrar
 Hide = Ocultar
 Show worked tiles = Mostrar casillas explotadas
@@ -660,12 +660,12 @@ We have found a stash of [amount] gold in the ruins! = ¡Hemos encontrado un ali
 [unit] finished exploring. = [unit] terminó de explorar.
 [unit] has no work to do. = [unit] no tiene trabajo.
 You're losing control of [name]. = Estás perdiendo el control de [name].
-You and [name] are no longer friends! = ¡Tú y [name] ya no son amigos!
+You and [name] are no longer friends! = ¡Tú y [name] ya no sois amigos!
 Your alliance with [name] is faltering. = Tu alianza con [name] se está debilitando.
-You and [name] are no longer allies! = ¡Tú y [name] ya no son aliados!
-[civName] gave us a [unitName] as gift near [cityName]! = ¡[civName] nos dio un [unitName] como regalo cerca de [cityName]!
+You and [name] are no longer allies! = ¡Tú y [name] ya no sois aliados!
+[civName] gave us a [unitName] as gift near [cityName]! = ¡[civName] nos ha dado un [unitName] como regalo cerca de [cityName]!
 [civName] has denounced us! = ¡[civName] nos ha denunciado!
-[cityName] has been connected to your capital! = ¡[cityName] ya está conectada a tu capital!
+[cityName] has been connected to your capital! = ¡[cityName] ha sido conectada a tu capital!
 [cityName] has been disconnected from your capital! = ¡[cityName] ya no está conectada a tu capital!
 [civName] has accepted your trade request = [civName] ha aceptado tu solicitud de comercio
 [civName] has denied your trade request = [civName] ha rechazado tu solicitud de comercio
@@ -786,7 +786,7 @@ The city will not produce anything. = La ciudad no producirá nada.
 Pick a tech = Elige una tecnología
 Pick a free tech = Elige una tecnología gratis
 Research [technology] = Investigar [technology]
-Pick [technology] as free tech = Elegir [technology] como tecnología gratis
+Pick [technology] as free tech = Elegir [technology] como tecnología gratuita
 Units enabled = Unidades habilitadas
 Buildings enabled = Edificios habilitados
 Wonder = Maravilla
@@ -816,7 +816,7 @@ Terrain = Terreno
 
 Hurry Research = Acelerar investigación
 Conduct Trade Mission = Tomar mision De Comercio
-Your trade mission to [civName] has earned you [goldAmount] gold and [influenceAmount] influence! = ¡Tu misión comercial en [civName] te ha otorgado [goldAmount] de oro e [influenceAmount] de influencia!
+Your trade mission to [civName] has earned you [goldAmount] gold and [influenceAmount] influence! = ¡Tu misión comercial en [civName] te ha otorgado [goldAmount] de oro y [influenceAmount] de influencia!
 Hurry Wonder = Acelerar Maravilla
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = ¡Tus ciudadanos han estado contentos con tu gobierno durante tanto tiempo que el imperio ha entrado en una Edad de Oro!
 You have entered the [newEra]! = ¡Has entrado en la [newEra]!
@@ -869,7 +869,7 @@ Destroy [civName] = Destruye [civName]
 Our status = Nuestro estado
 Global status = Estado global
 Spaceship parts remaining = Partes restantes de la nave espacial
-Branches completed = Ramas completada
+Branches completed = Ramas completadas
 Undefeated civs = Naciones no derrotadas
 
 # Capturing a city
@@ -879,7 +879,7 @@ Annex = Anexionar
 Annexed cities become part of your regular empire. = Las ciudades anexionadas pasan a formar parne de tu imperio
 Their citizens generate 2x the unhappiness, unless you build a courthouse. = Sus ciudadanos generan el doble de descontento a no ser que construyas una delegación.
 Puppet = Convertir en títere
-Puppeted cities do not increase your tech or policy cost, but their citizens generate 1.5x the regular unhappiness. = Las ciudades títeres no aumentan el coste en ciencia o cultura, pero sus ciudadanos estaran 1,5 veces mas descontentos.
+Puppeted cities do not increase your tech or policy cost, but their citizens generate 1.5x the regular unhappiness. = Las ciudades títeres no aumentan el coste de tecnologías o políticas, pero sus ciudadanos estarán 1,5 veces mas descontentos.
 You have no control over the the production of puppeted cities. = No puedes controlar la producción en las ciudades títeres.
 Puppeted cities also generate 25% less Gold and Science. = Las ciudades títeres generan 25% menos de oro y ciencia.
 A puppeted city can be annexed at any time. = Una ciudad títere puede ser anexionada en cualquier momento.
@@ -1124,7 +1124,7 @@ Civil Service = Servicio civil
  # Requires translation!
 'The only thing that saves us from the bureaucracy is it inefficiency' - Eugene McCarthy = 
  # Requires translation!
-Enables Open Borders agreements = 
+Enables Open Borders agreements = Habilita acuerdos de fronteras abiertas
 Guilds = Gremios
  # Requires translation!
 'The merchants and the traders have come; their profits are pre-ordained...' - Sri Guru Granth Sahib = 
@@ -1290,7 +1290,7 @@ Improves movement speed on roads = Mejora la velocidad de movimiento en carreter
 Enables conversion of city production to science = Habilita la conversión de producción a ciencia
 Enables conversion of city production to gold = Habilita la conversión de producción a oro
 Enables embarkation for land units = Habilita la embarcacion a las unidades de tierra
-Enables embarked units to enter ocean tiles = Habilita a las unidades embarcadas a entrar en oceanós
+Enables embarked units to enter ocean tiles = Habilita a las unidades embarcadas a entrar en océanos
 Increases embarked movement +1 = +1 a la velocidad de movimiento a las embarcaciones
 
 # Tech eras
@@ -1434,7 +1434,7 @@ Work Boats = Barco de trabajo
 Cannot enter ocean tiles until Astronomy = No puede entrar al oceanó hasta investigar astronomia
 May create improvements on water resources = Puede crear mejoras en recursos acuaticos
 Trireme = Trirreme
-Cannot enter ocean tiles = No puede entrar al oceanó
+Cannot enter ocean tiles = No puede entrar al océano
 Chariot Archer = Arquero a carruaje
 No defensive terrain bonus = Sin bonus de defensa de terreno
 Rough terrain penalty = Penalización en terreno escabroso
@@ -1475,7 +1475,7 @@ Samurai = Samurai
 Combat very likely to create Great Generals = Es mas probable que se creen Grandes Generales a través del combate
 Caravel = Caravela
 Turtle Ship = Barco tortuga
-+1 Visibility Range = +1 Al Rango de Visibilidad
++1 Visibility Range = +1 al Rango de Visibilidad
 Cannon = Cañón
 Musketman = Mosquetero
 Musketeer = Mosquetero Revolucionario
@@ -1497,13 +1497,13 @@ Ironclad = Buque a vapor
 Double movement in coast = Doble movimiento en costas
 Landship = Tanque de la Gran Guerra
 Great War Infantry = Infanteria de la Gran Guerra
-Foreign Legion = Legion Olvidada
+Foreign Legion = Legion extranjera
 +20% bonus outside friendly territory = +20% de bonus fuera de territorio amistoso
 Foreign Land = Tierra extrangera
 Destroyer = Destructor
 Can attack submarines = Puede atacar a submarinos
 Machine Gun = Ametralladora montada
-Anti-Aircraft Gun = Arma Anti-Aerea
+Anti-Aircraft Gun = Cañón antiaéreo
 Infantry = Infanteria
 Battleship = Buque de guerra
 Submarine = Submarino
@@ -1512,10 +1512,10 @@ Invisible to others = Invisible para los demás
 Can only attack water = Sólo puede atacar a agua
 Carrier = Porta Aviones
 Triplane = Triplano
-[percent]% chance to intercept air attacks = [percent]% de posibilidad de interceptar ataque aéreos
+[percent]% chance to intercept air attacks = [percent]% de posibilidad de interceptar ataques aéreos
 Requires Manhattan Project = Requiere el proyecto Manhattan
 6 tiles in every direction always visible = Quedan visibles 6 casillas en cada dirección
-Great War Bomber = Bombardero de la Gran Guerra
+Great War Bomber = Bombardero I Guerra
 Rocket Artillery = Artilleria de misiles
 Anti-Tank Gun = Anti-Tanque
 Marine = Marine
