--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,8 +21,8 @@ android {
         applicationId "com.unciv.app"
         minSdkVersion 14
         targetSdkVersion 29
-        versionCode 349
-        versionName "3.4.1"
+        versionCode 350
+        versionName "3.4.1-patch1"
 
         archivesBaseName = "Unciv"
     }
