--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -7,8 +7,7 @@ Enter the city screen!\nClick the city button twice = Entra nella schermata citt
 Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Ricerca una tecnologia!\nClicca sul tasto tecnologia (verdognolo, in alto a sinistra) > \nScegli una tecnologia > Clicca su 'Ricerca' (in basso a destra)
 Pick a construction!\nEnter city screen > Click on a unit or building (left side) = Scegli una costruzione\nEntra nella schermata cittadina > Clicca su un'unità o un edificio (lato sinistro)
 Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Termina il turno!\nClicca su 'Prossima unità' varie volte > Clicca su 'Prossimo turno'
- # Requires translation!
-Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = 
+Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Reassegna delle celle sfruttate\nEntra nella schermata cittadina > Clicca su una casella sfruttata (verde) per liberarla > \n Clicca su una casella non sfruttata per assegnarle un abitante
 Meet another civilization!\nExplore the map until you encounter another civilization! = Incontra un'altra civiltà!\nEsplora la mappa finché non incontri un'altra civiltà.
 Open the options table!\nClick the menu button (top left) > click 'Options' = Apri il menu delle opzioni!\nClicca sul tasto menu (in altro a sinistra) > Clicca su 'Opzioni'.
 Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Choose 'Create improvement' > Choose the farm > \n Leave the worker there until it's finished = Costruisci un miglioramento!\nCostruisci un Lavoratore > Spostalo su una Pianura o su una Prateria > \n Scegli 'Costruisci miglioramento' > Scegli 'Fattoria' > \n Lascia lì il Lavoratore finché non ha finito.
@@ -481,6 +480,10 @@ Songhai = Songhai
 Askia = Askia
 Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = Saccheggiare città o conquistare accampamenti barbari frutta una quantità tripla di Oro. Le unità imbarcate possono difendersi da sole.
 
+Spain = Spagna
+Isabella = Isabella
+Gold bonus for discovering a Natural Wonder (bonus enhancef if first to discover it). Culture, Happiness and tile yelds from Natural Wonders. = Otteni Oro bonus (raddoppiato se la scopri per prima) quando scopri una Meraviglia Naturale, che donano il doppio di Cultura, Felicità e rese di casella.
+
 # New game screen
 
 Uniques = Abilità unica
@@ -499,6 +502,7 @@ Number of city-states = Numero di Città-Stato
 One City Challenge = Sfida a città singola
 No barbarians = Niente barbari
 No ancient ruins = Niente antiche rovine
+No Natural Wonders = Niente Meraviglie Naturali
 
 Victory conditions = Condizioni di Vittoria
 Scientific = Scientifica
@@ -929,7 +933,7 @@ Requires = Richiede
 
 Adopt policy = Adotta politica
 Adopt free policy = Adotta politica
-Unlocked at = Si sblocca con
+Unlocked at = Richiede
 
 Tradition = Tradizionalismo
 +3 culture in capital and increased rate of border expansion = +3 Cultura nella Capitale, e maggior tasso di espansione dei confini
