Added missing translations natural wonders related

--- a/android/assets/jsons/translationsByLanguage/Czech.properties
+++ b/android/assets/jsons/translationsByLanguage/Czech.properties
@@ -481,6 +481,11 @@ Songhai = Songhajská říše
 Askia = Askijská říše
 Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = Získává trojnásobek zlata z Barbarských táborů a drancování měst. Jednotky při naloďování se můžou bránit.
 
+Spain =
+Isabella =
+ # Requires translation!
+100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 
+
 # New game screen
 
 Uniques = Unikátní dovednosti
@@ -499,7 +504,8 @@ Number of city-states = Počet městských států
 One City Challenge = Výzva - Jen jedno město
 No barbarians = Bez barbarů
 No ancient ruins = Bez starobylých ruin
-
+ # Requires translation!
+No Natural Wonders = 
 Victory conditions = Způsoby výhry
 Scientific = Vědecká
 Domination = Dominance
@@ -672,6 +678,10 @@ One of our trades with [nation] has been cut short = Jedna z našich obchodních
 [nation] refused to stop settling cities near us! = Národ [nation] vypověděl dohodu o nebudování měst poblíž našich hranic!
 We have allied with [nation]. = Uzavřeli jsme alianci s civilizací [nation].
 We have lost alliance with [nation]. = Ztratili jsme alianci s civilizací [nation].
+ # Requires translation!
+We have discovered [naturalWonder]! = 
+ # Requires translation!
+We have received [goldAmount] Gold for discovering [naturalWonder] = 
 
 # World Screen UI
 
@@ -842,6 +852,8 @@ Closest city = Nejbližší město
 Action = Činnost
 Defeated = Poražený(á)
 Tiles = Políčka
+ # Requires translation!
+Natural Wonders = 
 
 #Victory
 
@@ -1560,4 +1572,6 @@ Ambush I = Přepadení I
 Ambush II = Přepadení II
 Haka War Dance = Haka - valečný tanec
 -10% combat strength for adjacent enemy units = -10% bojové síly pro nepřátelské jednotky na sousedních políčkách
-Rejuvenation = Omlazení
+Rejuvenation =
+ # Requires translation!
+All healing effects doubled = 
