--- a/android/assets/jsons/translationsByLanguage/French.properties
+++ b/android/assets/jsons/translationsByLanguage/French.properties
@@ -483,6 +483,11 @@ Songhai = Songhaï
 Askia = Askia
 Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = Reçoit 3 fois plus d'or lors des pillages de campement barbare et de villes. Les unités embarquées peuvent se défendre.
 
+Spain =
+Isabella =
+ # Requires translation!
+100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 
+
 # New game screen
 
 Uniques = Uniques
@@ -502,7 +507,8 @@ Number of city-states = Nombre de cité-état
 One City Challenge = Défi ville unique
 No barbarians = Aucun barbare
 No ancient ruins = Aucune ruine ancienne
-
+ # Requires translation!
+No Natural Wonders = 
 Victory conditions = Conditions de victoire
 Scientific = Scientifique
 Domination = Conquête
@@ -677,6 +683,10 @@ One of our trades with [nation] has been cut short = L'un de nos accord commerci
 [nation] refused to stop settling cities near us! = Le/la/l' [nation] refuse d'arrêter de fonder des cités près de nous !
 We have allied with [nation]. = Nous sommes alliés avec le/la/l' [nation].
 We have lost alliance with [nation]. = Notre alliance est terminée avec le/la/l' [nation].
+ # Requires translation!
+We have discovered [naturalWonder]! = 
+ # Requires translation!
+We have received [goldAmount] Gold for discovering [naturalWonder] = 
 
 # World Screen UI
 
@@ -848,6 +858,8 @@ Closest city = Ville la plus proche
 Action = Action
 Defeated = Vaincu
 Tiles = Tuiles
+ # Requires translation!
+Natural Wonders = 
 
 #Victory
 
@@ -1565,4 +1577,6 @@ Ambush I = Embuscade I
 Ambush II = Embuscade II
 Haka War Dance = Haka - Danse de guerre
 -10% combat strength for adjacent enemy units = -10% de force de combats pour toutes les unités ennemies adjacentes
-Rejuvenation = Rajeunissement
+Rejuvenation =
+ # Requires translation!
+All healing effects doubled = 
