--- a/android/assets/jsons/translationsByLanguage/template.properties
+++ b/android/assets/jsons/translationsByLanguage/template.properties
@@ -480,6 +480,10 @@ Songhai =
 Askia = 
 Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = 
 
+Spain =
+Isabella =
+100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 
+
 # New game screen
 
 Uniques = 
@@ -498,7 +502,7 @@ Number of city-states =
 One City Challenge = 
 No barbarians = 
 No ancient ruins = 
-
+No Natural Wonders = 
 Victory conditions = 
 Scientific = 
 Domination = 
@@ -671,6 +675,8 @@ One of our trades with [nation] has been cut short =
 [nation] refused to stop settling cities near us! = 
 We have allied with [nation]. = 
 We have lost alliance with [nation]. = 
+We have discovered [naturalWonder]! = 
+We have received [goldAmount] Gold for discovering [naturalWonder] = 
 
 # World Screen UI
 
@@ -841,6 +847,7 @@ Closest city =
 Action = 
 Defeated = 
 Tiles = 
+Natural Wonders = 
 
 #Victory
 
@@ -1556,4 +1563,5 @@ Ambush I =
 Ambush II = 
 Haka War Dance = 
 -10% combat strength for adjacent enemy units = 
-Rejuvenation = 
+Rejuvenation =
+All healing effects doubled = 
