--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -481,6 +481,11 @@ Songhai = Songhai
 Askia = Askia
 Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = Saccheggiare città o conquistare accampamenti barbari frutta una quantità tripla di Oro. Le unità imbarcate possono difendersi da sole.
 
+Spain =
+Isabella =
+ # Requires translation!
+100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 
+
 # New game screen
 
 Uniques = Abilità unica
@@ -499,7 +504,8 @@ Number of city-states = Numero di Città-Stato
 One City Challenge = Sfida a città singola
 No barbarians = Niente barbari
 No ancient ruins = Niente antiche rovine
-
+ # Requires translation!
+No Natural Wonders = 
 Victory conditions = Condizioni di Vittoria
 Scientific = Scientifica
 Domination = Dominazione
@@ -672,6 +678,10 @@ One of our trades with [nation] has been cut short = Un nostro accordo con [nati
 [nation] refused to stop settling cities near us! = [nation] ha rifiutato di smettere di fondare città vicino a noi!
 We have allied with [nation]. = Abbiamo stretto un'alleanza con [nation].
 We have lost alliance with [nation]. = Non siamo più alleati di [nation].
+ # Requires translation!
+We have discovered [naturalWonder]! = 
+ # Requires translation!
+We have received [goldAmount] Gold for discovering [naturalWonder] = 
 
 # World Screen UI
 
@@ -842,6 +852,8 @@ Closest city = Città più vicina
 Action = Azione
 Defeated = Sconfitto
 Tiles = Caselle
+ # Requires translation!
+Natural Wonders = 
 
 #Victory
 
@@ -1557,4 +1569,6 @@ Ambush I = Imboscata aerea I
 Ambush II = Imboscata aerea II
 Haka War Dance = Danza di guerra Haka
 -10% combat strength for adjacent enemy units = -10% Forza alle unità nemiche adiacenti a questa unità
-Rejuvenation = Ringiovanimento
+Rejuvenation =
+ # Requires translation!
+All healing effects doubled = 
